make project restructuring, trying fix gRPC-Gateway
